Tests/Conformance/Generated/Builtin/Constant/Bls12_381/G2/Off_curve.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G2.Off_curve

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bls12_381_G2_off_curve "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bls12-381/G2/off-curve/off-curve.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G2.Off_curve
